<resources>
    <string name="app_name">Oki Firdaus Syah Putra_E41211524_GOL D_Mobile</string>
    <string name="minggu_2_layout">Minggu 2 - Layout</string>
    <string name="linear_layout">Linear\nLayout</string>
    <string name="relative_layout">Relative\nLayout</string>
    <string name="constraint_layout">Constraint\nLayout</string>
    <string name="send">Send</string>
    <string name="subject">subject</string>
    <string name="message">message</string>
    <string name="to">to</string>
    <string name="calendar">Calendar</string>
    <string name="masukkan_tanggal">Masukkan tanggal</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="cancel">Batal</string>
    <string name="empty">Field can not be blank</string>
    <string name="update">Update</string>
    <string name="change">Ubah</string>
    <string name="add">Tambah</string>
    <string name="save">Simpan</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="message_cancel">Apakah anda ingin membatalkan perubahan pada form?</string>
    <string name="message_delete">Apakah anda yakin ingin menghapus item ini?</string>
    <string name="added">Satu item berhasil ditambahkan</string>
    <string name="changed">Satu item berhasil diubah</string>
    <string name="deleted">Satu item berhasil dihapus</string>
    <string name="delete">Hapus</string>
</resources>