<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp"
    tools:context=".LinearLayoutActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/receiver_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/to"
        android:layout_marginBottom="8dp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/subject_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject"
        android:layout_marginBottom="8dp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/main_message_edit_text"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="top"
        android:hint="@string/message"
        android:layout_marginBottom="16dp"
        />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:textAllCaps="false"/>



</androidx.appcompat.widget.LinearLayoutCompat>