<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.TableLayoutActivity">

    <TableRow
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_in"
            android:textColor="#090000"
            android:textSize="25sp"
            android:textStyle="bold">

        </TextView>
    </TableRow>

    <TableRow android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/username"
            android:textSize="20sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </TableRow>

    <TableRow android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/password"
            android:textSize="20sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:paddingHorizontal="16dp"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span= "2"
            android:clickable="true"
            android:text="@string/submit"/>
    </TableRow>

</TableLayout>