<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:paddingTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:background="@drawable/circular_container"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/linear_layout"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/btnRelativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:background="@drawable/circular_container"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/relative_layout"
            android:textAllCaps="false" />


        <TextView
            android:id="@+id/btnConstraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circular_container"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/constraint_layout"
            android:textAllCaps="false" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:paddingTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnMaterialDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:background="@drawable/circular_container"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="Material\nDesign"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/btnListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:background="@drawable/circular_container"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="List\nView"
            android:textAllCaps="false" />


        <TextView
            android:id="@+id/btnGridView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circular_container"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="Grid\nView"
            android:textAllCaps="false" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:paddingTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:background="@drawable/circular_container"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="Recycler\nView"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/btnActivityTheory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:background="@drawable/circular_container"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="Activity\nTheory"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/btnActivityLifeCycle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circular_container"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/relative_layout"
            android:textAllCaps="false" />




    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>